Add runtime telemetry